WebKit Bugzilla
New
Browse
Search+
Log In
×
Sign in with GitHub
or
Remember my login
Create Account
·
Forgot Password
Forgotten password account recovery
NEW
259397
[MSE] Fix removal of samples being replaced
https://bugs.webkit.org/show_bug.cgi?id=259397
Summary
[MSE] Fix removal of samples being replaced
Enrique Ocaña
Reported
2023-07-21 09:56:54 PDT
During replacement of buffered range, SourceBuffer may fail to remove some samples if its PTS falls in "contiguousFrameTolerance" gap introduced in
https://bugs.webkit.org/show_bug.cgi?id=190085
. The problem can be seen with this test
https://emutavchi.github.io/tests/mse/mse_sample_replacement_test.html
and instrumentation on WebKit side that logs the append number for each sample:
https://github.com/emutavchi/WebKitForWayland/commit/8d272af173a4ba23a0922949a02d0c7f79339158
Attachments
Add attachment
proposed patch, testcase, etc.
Enrique Ocaña
Comment 1
2023-07-21 10:20:56 PDT
Pull request:
https://github.com/WebKit/WebKit/pull/15986
Radar WebKit Bug Importer
Comment 2
2023-07-28 09:57:18 PDT
<
rdar://problem/113039128
>
Xabier Rodríguez Calvar
Comment 3
2023-07-31 04:00:37 PDT
***
Bug 259390
has been marked as a duplicate of this bug. ***
Note
You need to
log in
before you can comment on or make changes to this bug.
Top of Page
Format For Printing
XML
Clone This Bug