[MSE] Fix removal of samples being replaced https://bugs.webkit.org/show_bug.cgi?id=259397

Reviewed by NOBODY (OOPS!).

During replacement of buffered range, SourceBuffer may fail to remove some samples if its PTS falls in
"contiguousFrameTolerance" gap introduced in https://bugs.webkit.org/show_bug.cgi?id=190085.

The problem can be seen with this test https://emutavchi.github.io/tests/mse/mse_sample_replacement_test.html
and instrumentation on WebKit side that logs the append number for each sample:
https://github.com/emutavchi/WebKitForWayland/commit/8d272af173a4ba23a0922949a02d0c7f79339158

This patch keeps any sync sample and subsequent dependent ones that may exist between frameEndTimestamp
- contiguousFrameTolerance and frameEndTimestamp, but ensures that any other sample before them in the
interval is removed.

Original author: Eugene Mutavchi <Ievgen_Mutavchi@comcast.com>
See: https://github.com/WebPlatformForEmbedded/WPEWebKit/pull/1117

* Source/WebCore/platform/graphics/SourceBufferPrivate.cpp:
(WebCore::SourceBufferPrivate::processMediaSample): Keep any sync sample and subsequent dependent ones that may exist between frameEndTimestamp - contiguousFrameTolerance and frameEndTimestamp.