Source/WebCore/platform/graphics/SourceBufferPrivate.cpp
@@ -1109,7 +1109,7 @@ void SourceBufferPrivate::processMediaSample(Ref<MediaSample>&& sample)
 
                 MediaTime highestBufferedTime = trackBuffer.maximumBufferedTime();
                 MediaTime eraseBeginTime = trackBuffer.highestPresentationTimestamp();
-                MediaTime eraseEndTime = frameEndTimestamp - contiguousFrameTolerance;
+                MediaTime eraseEndTime = frameEndTimestamp;
 
                 if (eraseEndTime <= eraseBeginTime)
                     break;
@@ -1121,6 +1121,17 @@ void SourceBufferPrivate::processMediaSample(Ref<MediaSample>&& sample)
                 } else {
                     // In any other case, perform a binary search (O(log(n)).
                     range = trackBuffer.samples().presentationOrder().findSamplesBetweenPresentationTimes(eraseBeginTime, eraseEndTime);
+                }
+
+                if (range.second != trackBuffer.samples().presentationOrder().end() && !sample->isSync()) {
+                    auto eraseEndTimeMinusTolerance = frameEndTimestamp - contiguousFrameTolerance;
+                    while (range.first != range.second) {
+                        auto& oldSample = *((range.second)->second);
+                        if (oldSample.isSync() || eraseEndTimeMinusTolerance > oldSample.presentationTime()
+                            || sample->duration() != oldSample.duration())
+                            break;
+                        --range.second;
+                    }
                 }
 
                 if (range.first != trackBuffer.samples().presentationOrder().end())
